Make long-links break word to make sure we don't get a horizontal scrollbar

--- a/wagtailio/static/css/core/page_content.scss
+++ b/wagtailio/static/css/core/page_content.scss
@@ -35,6 +35,7 @@
     a {
         text-decoration: none;
         color: $color-secondary-highlight;
+        word-wrap: break-word;
     }
     ol, ul {
         margin: 0 0 $inline-spacing-bottom;
